# zonefile

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yaml  release.yml  test.yml
src/: reconciliation.rs
zonefile/: Cargo.toml
zonefile/crds/: Cargo.toml
zonefile/examples/: simple-zonefile.yaml
zonefile/src/: main.rs
