[workspace]
resolver = "2"
members = [
    "zonefile/crds",
    "zonefile",
]

[workspace.dependencies]
# Kubizone
kubizone-crds = { version = "0.1.0" }
zonefile-crds = { path = "zonefile/crds", version = "0.1.0" }

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# Kubernetes
kube = { version = "0.87.1", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde_yaml = { version = "0.9.27" }
schemars = { version = "0.8.15" }

# Async
tokio = { version = "1.33.0", features = ["macros", "rt"] }
futures = "0.3.29"

# CLI
clap = { version = "4.4.7", features = ["derive"]}
