[package]
name = "zonefile"
description = "Zonefile Controller"
keywords = ["kubernetes", "kubizone", "crd", "zonefile"]
repository = "https://github.com/kubi-zone/zonefile"
version = "0.1.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Kubizone
kubizone-crds = "0.10.0"
kubizone-common = "0.13.0"
zonefile-crds = "0.2"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# Kubernetes
kube = { version = "0.88", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

# Async
tokio = { version = "1.33", features = ["macros", "rt"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
indoc = "2"
