[package]
name = "zonefile"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Kubizone
kubizone-crds = { workspace = true }
zonefile-crds = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# CLI
clap = { workspace = true }